добавляет иконки в секции-4

--- a/index.html
+++ b/index.html
@@ -143,6 +143,44 @@
               <div class="command-aside">
                 <h3 class="command-subtitle">Игорь Демьяненко</h3>
                 <p class="command-text">Product Designer</p>
+                <ul class="command-soc-list list">
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-Tvitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="command-item">
@@ -155,6 +193,44 @@
               <div class="command-aside">
                 <h3 class="command-subtitle">Ольга Репина</h3>
                 <p class="command-text">Frontend Developer</p>
+                <ul class="command-soc-list list">
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-Tvitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="command-item">
@@ -167,6 +243,44 @@
               <div class="command-aside">
                 <h3 class="command-subtitle">Николай Тарасов</h3>
                 <p class="command-text">Marketing</p>
+                <ul class="command-soc-list list">
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-Tvitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="command-item">
@@ -179,6 +293,44 @@
               <div class="command-aside">
                 <h3 class="command-subtitle">Михаил Ермаков</h3>
                 <p class="command-text">UI Designer</p>
+                <ul class="command-soc-list list">
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-Tvitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="command-soc-item">
+                    <a class="command-soc-link link" href="">
+                      <svg class="command-soc-icon" weight="20" height="20">
+                        <use
+                          href="./imedges/icon/symbol-defs.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
