--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <main>
       <!-- section-1 -->
-      <section class="hero section">
+      <section class="hero section overlay">
         <div class="conteiner">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="hero-button link" type="button">
@@ -66,6 +66,13 @@
           <h2 class="visually-hidden">Достоинства</h2>
           <ul class="dignity-list list">
             <li class="dignity-item">
+              <div class="dignity-icon">
+                <svg class="" weight="65" height="70">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-Vector-1"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="dignity-subtitle">Внимание к деталям</h3>
               <p class="dignity-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -73,6 +80,13 @@
               </p>
             </li>
             <li class="dignity-item">
+              <div class="dignity-icon">
+                <svg class="" weight="65" height="70">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-Vector-2"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="dignity-subtitle">Пунктуальность</h3>
               <p class="dignity-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -80,6 +94,13 @@
               </p>
             </li>
             <li class="dignity-item">
+              <div class="dignity-icon">
+                <svg class="" weight="65" height="70">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-Vector-3"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="dignity-subtitle">Планирование</h3>
               <p class="dignity-text">
                 Равным образом консультация с широким активом в значительной
@@ -87,6 +108,13 @@
               </p>
             </li>
             <li class="dignity-item">
+              <div class="dignity-icon">
+                <svg class="" weight="65" height="70">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-astronaut"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="dignity-subtitle">Современные технологии</h3>
               <p class="dignity-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -336,34 +364,125 @@
           </ul>
         </div>
       </section>
-    </main>
-    <footer class="footer">
-      <div class="conteiner">
-        <a class="logo-footer link" href=""
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <address class="footer-address">
-          <ul class="footer-list list">
-            <li class="footer-item">
-              <a
-                class="footer-address-link link"
-                href="https://goo.gl/maps/mEJsGeLwNFtNo4VW8"
-                target="blank"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <!--section-5-->
+      <section class="section">
+        <div class="conteiner">
+          <h2 class="clients-title">Постоянные клиенты</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon" weight="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-link link" href="mailto:info@example.com"
-                >info@example.com</a
-              >
+            <li class="clients-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon" weight="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-link link" href="tel:+380991111111"
-                >+38 099 111 11 11</a
-              >
+            <li class="clients-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon" weight="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon" weight="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon" weight="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link link" href="">
+                <svg class="clients-icon" weight="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="foter-conteiner conteiner">
+        <div>
+          <a class="logo-footer link" href=""
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address class="footer-address">
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a
+                  class="footer-address-link link"
+                  href="https://goo.gl/maps/mEJsGeLwNFtNo4VW8"
+                  target="blank"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-soc">
+          <p class="footer-text">присоединяйтесь</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href="">
+                <svg class="footer-soc-icon" weight="20" height="20">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href="">
+                <svg class="footer-soc-icon" weight="20" height="20">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Tvitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href="">
+                <svg class="footer-soc-icon" weight="20" height="20">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href="">
+                <svg class="footer-soc-icon" weight="20" height="20">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
