--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       </div>
     </header>
     <main>
-      <!--secsion-5-->
+      <!--secsion-6-->
       <section class="progects section">
         <div class="conteiner">
           <ul class="list-button list">
@@ -212,31 +212,74 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="footer-address conteiner">
-        <a class="logo-footer link" href=""
-          >Web<span class="logo-white">Studio</span></a
-        >
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a
-              class="footer-address-link link"
-              href="https://goo.gl/maps/mEJsGeLwNFtNo4VW8"
-              target="blank"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-link link" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li class="footer-item">
-            <a class="footer-link link" href="tel:+380991111111"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="foter-conteiner conteiner">
+        <div>
+          <a class="logo-footer link" href=""
+            >Web<span class="logo-white">Studio</span></a
+          >
+          <address class="footer-address">
+            <ul class="footer-list list">
+              <li class="footer-item">
+                <a
+                  class="footer-address-link link"
+                  href="https://goo.gl/maps/mEJsGeLwNFtNo4VW8"
+                  target="blank"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link link" href="mailto:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="footer-link link" href="tel:+380991111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-soc">
+          <p class="footer-text">присоединяйтесь</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href="">
+                <svg class="footer-soc-icon" weight="20" height="20">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href="">
+                <svg class="footer-soc-icon" weight="20" height="20">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Tvitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href="">
+                <svg class="footer-soc-icon" weight="20" height="20">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link link" href="">
+                <svg class="footer-soc-icon" weight="20" height="20">
+                  <use
+                    href="./imedges/icon/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
