--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
           <h1 class="visually-hidden">Наши проекты</h1>
           <ul class="progects-list list">
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img.jpg"
                   alt="ноутбук"
