--- a/index.html
+++ b/index.html
@@ -38,14 +38,20 @@
         </nav>
         <ul class="header-secondlist list">
           <li class="header-seconditem">
-            <a class="header-secondlink link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="header-secondlink link" href="mailto:info@devstudio.com">
+              <svg class="header-icon" weight="16" height="12">
+                <use href="./imedges/icon/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="header-seconditem">
-            <a class="header-secondlink link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="header-secondlink tel link" href="tel:+380961111111">
+              <svg class="header-icon" weight="10" height="16">
+                <use href="./imedges/icon/symbol-defs.svg#icon-telephone"></use>
+              </svg>
+              <div class="Telephone">+38 096 111 11 11</div>
+            </a>
           </li>
         </ul>
       </div>
@@ -68,9 +74,7 @@
             <li class="dignity-item">
               <div class="dignity-icon">
                 <svg class="" weight="65" height="70">
-                  <use
-                    href="./imedges/icon/symbol-defs.svg#icon-Vector-1"
-                  ></use>
+                  <use href="./imedges/icon/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="dignity-subtitle">Внимание к деталям</h3>
@@ -82,9 +86,7 @@
             <li class="dignity-item">
               <div class="dignity-icon">
                 <svg class="" weight="65" height="70">
-                  <use
-                    href="./imedges/icon/symbol-defs.svg#icon-Vector-2"
-                  ></use>
+                  <use href="./imedges/icon/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="dignity-subtitle">Пунктуальность</h3>
@@ -96,9 +98,7 @@
             <li class="dignity-item">
               <div class="dignity-icon">
                 <svg class="" weight="65" height="70">
-                  <use
-                    href="./imedges/icon/symbol-defs.svg#icon-Vector-3"
-                  ></use>
+                  <use href="./imedges/icon/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="dignity-subtitle">Планирование</h3>
@@ -185,7 +185,7 @@
                     <a class="command-soc-link link" href="">
                       <svg class="command-soc-icon" weight="20" height="20">
                         <use
-                          href="./imedges/icon/symbol-defs.svg#icon-Tvitter"
+                          href="./imedges/icon/symbol-defs.svg#icon-twitter"
                         ></use>
                       </svg>
                     </a>
@@ -194,7 +194,7 @@
                     <a class="command-soc-link link" href="">
                       <svg class="command-soc-icon" weight="20" height="20">
                         <use
-                          href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                          href="./imedges/icon/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -235,7 +235,7 @@
                     <a class="command-soc-link link" href="">
                       <svg class="command-soc-icon" weight="20" height="20">
                         <use
-                          href="./imedges/icon/symbol-defs.svg#icon-Tvitter"
+                          href="./imedges/icon/symbol-defs.svg#icon-twitter"
                         ></use>
                       </svg>
                     </a>
@@ -244,7 +244,7 @@
                     <a class="command-soc-link link" href="">
                       <svg class="command-soc-icon" weight="20" height="20">
                         <use
-                          href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                          href="./imedges/icon/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -285,7 +285,7 @@
                     <a class="command-soc-link link" href="">
                       <svg class="command-soc-icon" weight="20" height="20">
                         <use
-                          href="./imedges/icon/symbol-defs.svg#icon-Tvitter"
+                          href="./imedges/icon/symbol-defs.svg#icon-twitter"
                         ></use>
                       </svg>
                     </a>
@@ -294,7 +294,7 @@
                     <a class="command-soc-link link" href="">
                       <svg class="command-soc-icon" weight="20" height="20">
                         <use
-                          href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                          href="./imedges/icon/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -335,7 +335,7 @@
                     <a class="command-soc-link link" href="">
                       <svg class="command-soc-icon" weight="20" height="20">
                         <use
-                          href="./imedges/icon/symbol-defs.svg#icon-Tvitter"
+                          href="./imedges/icon/symbol-defs.svg#icon-twitter"
                         ></use>
                       </svg>
                     </a>
@@ -344,7 +344,7 @@
                     <a class="command-soc-link link" href="">
                       <svg class="command-soc-icon" weight="20" height="20">
                         <use
-                          href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                          href="./imedges/icon/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -371,43 +371,43 @@
           <ul class="clients-list list">
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="106" height="60">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo"></use>
+                <svg class="clients-icon" weight="41" height="47">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-group-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="106" height="60">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-1"></use>
+                <svg class="clients-icon" weight="40" height="52">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-group-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="106" height="60">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-2"></use>
+                <svg class="clients-icon" weight="41" height="44">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-group-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="106" height="60">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-3"></use>
+                <svg class="clients-icon" weight="85" height="41">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-group-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="106" height="60">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-4"></use>
+                <svg class="clients-icon" weight="63" height="46">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-group-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="106" height="60">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-5"></use>
+                <svg class="clients-icon" weight="94" height="44">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-group-6"></use>
                 </svg>
               </a>
             </li>
@@ -459,7 +459,7 @@
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
                 <svg class="footer-soc-icon" weight="20" height="20">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-Tvitter"></use>
+                  <use href="./imedges/icon/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -467,7 +467,7 @@
               <a class="footer-soc-link link" href="">
                 <svg class="footer-soc-icon" weight="20" height="20">
                   <use
-                    href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                    href="./imedges/icon/symbol-defs.svg#icon-facebook"
                   ></use>
                 </svg>
               </a>
