--- a/portfolio.html
+++ b/portfolio.html
@@ -38,14 +38,20 @@
         </nav>
         <ul class="header-secondlist list">
           <li class="header-seconditem">
-            <a class="header-secondlink link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <a class="header-secondlink link" href="mailto:info@devstudio.com">
+              <svg class="header-icon" weight="16" height="12">
+                <use href="./imedges/icon/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="header-seconditem">
-            <a class="header-secondlink link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <a class="header-secondlink tel link" href="tel:+380961111111">
+              <svg class="header-icon" weight="10" height="16">
+                <use href="./imedges/icon/symbol-defs.svg#icon-telephone"></use>
+              </svg>
+              <div class="Telephone">+38 096 111 11 11</div>
+            </a>
           </li>
         </ul>
       </div>
@@ -255,7 +261,7 @@
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
                 <svg class="footer-soc-icon" weight="20" height="20">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-Tvitter"></use>
+                  <use href="./imedges/icon/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -263,7 +269,7 @@
               <a class="footer-soc-link link" href="">
                 <svg class="footer-soc-icon" weight="20" height="20">
                   <use
-                    href="./imedges/icon/symbol-defs.svg#icon-Vector-5"
+                    href="./imedges/icon/symbol-defs.svg#icon-facebook"
                   ></use>
                 </svg>
               </a>
