--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,10 @@
         <nav class="header-nav">
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link current" href="./index.html">Студия</a>
+              <a class="header-link link" href="./index.html">Студия</a>
             </li>
             <li class="header-item">
-              <a class="header-link link" href="">Портфолио</a>
+              <a class="header-link link current" href="">Портфолио</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Контакты</a>
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img-1.jpg"
                   alt="баскетболисты"
@@ -116,7 +116,7 @@
               </a>
             </li>
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img-2.jpg"
                   alt="эмблема"
@@ -130,7 +130,7 @@
               </a>
             </li>
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img-3.jpg"
                   alt="наушники"
@@ -144,7 +144,7 @@
               </a>
             </li>
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img-4.jpg"
                   alt="коробки"
@@ -158,7 +158,7 @@
               </a>
             </li>
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img-5.jpg"
                   alt="млнитор"
@@ -172,7 +172,7 @@
               </a>
             </li>
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img-6.jpg"
                   alt="книга"
@@ -186,7 +186,7 @@
               </a>
             </li>
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img-7.jpg"
                   alt="бирка"
@@ -200,7 +200,7 @@
               </a>
             </li>
             <li class="progects-item">
-              <a class="link" href="">
+              <a class="progects-link link" href="">
                 <img
                   src="./imedges/portfolio/img-8.jpg"
                   alt="руки на клавиатуре"
