--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </section>
       <!-- section-4 -->
-      <section class="section">
+      <section class="command-section section">
         <div class="conteiner">
           <h2 class="command-title">Наша команда</h2>
           <ul class="command-list list">
