--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <ul class="header-secondlist list">
           <li class="header-seconditem">
             <a class="header-secondlink link" href="mailto:info@devstudio.com">
-              <svg class="header-icon" weight="16" height="12">
+              <svg class="envelope-icon" weight="16" height="12">
                 <use href="./imedges/icon/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -47,7 +47,7 @@
           </li>
           <li class="header-seconditem">
             <a class="header-secondlink tel link" href="tel:+380961111111">
-              <svg class="header-icon" weight="10" height="16">
+              <svg class="telephone-icon" weight="10" height="16">
                 <use href="./imedges/icon/symbol-defs.svg#icon-telephone"></use>
               </svg>
               <div class="Telephone">+38 096 111 11 11</div>
