устраняет замечания ментора

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul class="header-secondlist list">
           <li class="header-seconditem">
             <a class="header-secondlink link" href="mailto:info@devstudio.com">
-              <svg class="envelope-icon" weight="16" height="12">
+              <svg class="envelope-icon" width="16" height="12">
                 <use href="./imedges/icon/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -47,7 +47,7 @@
           </li>
           <li class="header-seconditem">
             <a class="header-secondlink tel link" href="tel:+380961111111">
-              <svg class="telephone-icon" weight="10" height="16">
+              <svg class="telephone-icon" width="10" height="16">
                 <use href="./imedges/icon/symbol-defs.svg#icon-telephone"></use>
               </svg>
               +38 096 111 11 11
@@ -61,9 +61,7 @@
       <section class="hero section overlay">
         <div class="conteiner">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="hero-button link" type="button">
-            Заказать услугу
-          </button>
+          <button class="hero-button" type="button">Заказать услугу</button>
         </div>
       </section>
       <!-- section-2 -->
@@ -73,7 +71,7 @@
           <ul class="dignity-list list">
             <li class="dignity-item">
               <div class="dignity-icon">
-                <svg class="" weight="65" height="70">
+                <svg class="" width="70" height="70">
                   <use href="./imedges/icon/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -85,7 +83,7 @@
             </li>
             <li class="dignity-item">
               <div class="dignity-icon">
-                <svg class="" weight="65" height="70">
+                <svg class="" width="70" height="70">
                   <use href="./imedges/icon/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -97,7 +95,7 @@
             </li>
             <li class="dignity-item">
               <div class="dignity-icon">
-                <svg class="" weight="65" height="70">
+                <svg class="" width="70" height="70">
                   <use href="./imedges/icon/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -109,7 +107,7 @@
             </li>
             <li class="dignity-item">
               <div class="dignity-icon">
-                <svg class="" weight="65" height="70">
+                <svg class="" width="70" height="70">
                   <use
                     href="./imedges/icon/symbol-defs.svg#icon-astronaut"
                   ></use>
@@ -174,7 +172,7 @@
                 <ul class="command-soc-list list">
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-instagram"
                         ></use>
@@ -183,7 +181,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="16">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-twitter"
                         ></use>
@@ -192,7 +190,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="10" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-facebook"
                         ></use>
@@ -201,7 +199,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -224,7 +222,7 @@
                 <ul class="command-soc-list list">
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-instagram"
                         ></use>
@@ -233,7 +231,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="16">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-twitter"
                         ></use>
@@ -242,7 +240,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="10" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-facebook"
                         ></use>
@@ -251,7 +249,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -274,7 +272,7 @@
                 <ul class="command-soc-list list">
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-instagram"
                         ></use>
@@ -283,7 +281,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="16">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-twitter"
                         ></use>
@@ -292,7 +290,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="10" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-facebook"
                         ></use>
@@ -301,7 +299,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -324,7 +322,7 @@
                 <ul class="command-soc-list list">
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-instagram"
                         ></use>
@@ -333,7 +331,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="16">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-twitter"
                         ></use>
@@ -342,7 +340,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="10" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-facebook"
                         ></use>
@@ -351,7 +349,7 @@
                   </li>
                   <li class="command-soc-item">
                     <a class="command-soc-link link" href="">
-                      <svg class="command-soc-icon" weight="20" height="20">
+                      <svg class="command-soc-icon" width="20" height="20">
                         <use
                           href="./imedges/icon/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -371,43 +369,43 @@
           <ul class="clients-list list">
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="41" height="47">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-group-1"></use>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="40" height="52">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-group-2"></use>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="41" height="44">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-group-3"></use>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="85" height="41">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-group-4"></use>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="63" height="46">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-group-5"></use>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link link" href="">
-                <svg class="clients-icon" weight="94" height="44">
-                  <use href="./imedges/icon/symbol-defs.svg#icon-group-6"></use>
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./imedges/icon/symbol-defs.svg#icon-Logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -449,7 +447,7 @@
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" weight="20" height="20">
+                <svg class="footer-soc-icon" width="20" height="20">
                   <use
                     href="./imedges/icon/symbol-defs.svg#icon-instagram"
                   ></use>
@@ -458,14 +456,14 @@
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" weight="20" height="16">
+                <svg class="footer-soc-icon" width="20" height="20">
                   <use href="./imedges/icon/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" weight="10" height="20">
+                <svg class="footer-soc-icon" width="20" height="20">
                   <use
                     href="./imedges/icon/symbol-defs.svg#icon-facebook"
                   ></use>
@@ -474,7 +472,7 @@
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" weight="20" height="20">
+                <svg class="footer-soc-icon" width="20" height="20">
                   <use
                     href="./imedges/icon/symbol-defs.svg#icon-linkedin"
                   ></use>
