--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <ul class="header-secondlist list">
           <li class="header-seconditem">
             <a class="header-secondlink link" href="mailto:info@devstudio.com">
-              <svg class="envelope-icon" weight="16" height="12">
+              <svg class="envelope-icon" width="16" height="12">
                 <use href="./imedges/icon/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -47,7 +47,7 @@
           </li>
           <li class="header-seconditem">
             <a class="header-secondlink tel link" href="tel:+380961111111">
-              <svg class="telephone-icon" weight="10" height="16">
+              <svg class="telephone-icon" width="10" height="16">
                 <use href="./imedges/icon/symbol-defs.svg#icon-telephone"></use>
               </svg>
               +38 096 111 11 11
@@ -62,25 +62,27 @@
         <div class="conteiner">
           <ul class="list-button list">
             <li class="button-item">
-              <a class="progects-button link" href="" type="button">Все</a>
+              <button class="progects-button" href="" type="button">Все</button>
             </li>
             <li class="button-item">
-              <a class="progects-button link" href="" type="button"
-                >Веб-сайты</a
-              >
+              <button class="progects-button" href="" type="button">
+                Веб-сайты
+              </button>
             </li>
             <li class="button-item">
-              <a class="progects-button link" href="" type="button"
-                >Приложения</a
-              >
+              <button class="progects-button" href="" type="button">
+                Приложения
+              </button>
             </li>
             <li class="button-item">
-              <a class="progects-button link" href="" type="button">Дизайн</a>
+              <button class="progects-button" href="" type="button">
+                Дизайн
+              </button>
             </li>
             <li class="button-item">
-              <a class="progects-button link" href="" type="button"
-                >Маркетинг</a
-              >
+              <button class="progects-button" href="" type="button">
+                Маркетинг
+              </button>
             </li>
           </ul>
           <h1 class="visually-hidden">Наши проекты</h1>
@@ -251,7 +253,7 @@
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" weight="20" height="20">
+                <svg class="footer-soc-icon" width="20" height="20">
                   <use
                     href="./imedges/icon/symbol-defs.svg#icon-instagram"
                   ></use>
@@ -260,14 +262,14 @@
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" weight="20" height="16">
+                <svg class="footer-soc-icon" width="20" height="20">
                   <use href="./imedges/icon/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" weight="10" height="20">
+                <svg class="footer-soc-icon" width="20" height="20">
                   <use
                     href="./imedges/icon/symbol-defs.svg#icon-facebook"
                   ></use>
@@ -276,7 +278,7 @@
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
-                <svg class="footer-soc-icon" weight="20" height="20">
+                <svg class="footer-soc-icon" width="20" height="20">
                   <use
                     href="./imedges/icon/symbol-defs.svg#icon-linkedin"
                   ></use>
